# refget-server-python

./: .gitignore  Dockerfile  NOTICE  Procfile  README.md  compliance.sqlite3  create_compliance_database.py  dev.config.py  fasta-to-report.py  fly.toml  loader.py  pyproject.toml  run.py
app/: __init__.py  admin.py  config.py  models.py  orm.py  seq_store.py  utils.py  views.py
app/templates/: index.html
compliance/: db.py
loader/: __init__.py
migrations/: env.py
migrations/versions/: ca9e092d06c0_.py
tests/: base.py  globals.py  test_admin.py  test_app.py  test_checksums.py  test_metadata.py  test_no_admin.py  test_orm.py  test_root.py  test_sequences.py  test_service_info.py
